# pdf-bank-statement-parser

./: .gitignore  CHANGELOG.md  README.md  experience.md  main.py  pyproject.toml
pdf_bank_statement_parser/: cli.py  constants.py  exceptions.py  export.py  objects.py
pdf_bank_statement_parser/parse/: extract_transactions.py  output_validation.py  string_cleaning.py  transactions.py
pdf_bank_statement_parser/utils/: __init__.py  pdf_analyzer.py
src/: analyze_transactions.py  audit_uncategorized.py  custom_fnb_parser.py  excel_reader.py  financial_reporting.py  financial_template_generator.py  financial_template_generator.py.back  interactive_2024_audit.py  management_accounts.py  process_cashbook.py
