[project]
name = "fnb-statement-parser"
version = "0.1.0"
description = " Tools for converting First National Bank (FNB) bank statement PDFs into useful structured data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.4",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
]
